--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,6 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "styled-components": "^6.1.13",
