--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "styled-components": "^6.1.13",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-font": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
