--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "^52.0.0",
+    "expo-font": "~13.0.1",
     "expo-status-bar": "~2.0.0",
     "formik": "^2.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native": "^0.76.2",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "styled-components": "^6.1.13",
-    "yup": "^1.4.0",
-    "expo-font": "~13.0.1"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -33,7 +33,9 @@
     "@types/node": "^22.9.0",
     "@types/prop-types": "^15.7.13",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "@types/react-native-vector-icons": "^6.4.18",
+    "@types/react-navigation": "^3.4.0",
     "typescript": "^5.3.3"
   },
   "private": true
