--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/metro-runtime": "~4.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "expo": "^52.0.0",
     "expo-font": "~13.0.1",
     "expo-status-bar": "~2.0.0",
@@ -23,6 +25,7 @@
     "react-native": "^0.76.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "styled-components": "^6.1.13",
