--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "styled-components": "^6.1.13",
-    "victory-native": "^41.12.0",
+    "victory-native": "^37.0.3-next.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
